# batocera-emulationstation

./: .gitignore  CMakeLists.txt  MACOS.md  README.md  eslaunch.sh
es-app/src/: ApiSystem.cpp  CollectionSystemManager.cpp  ContentInstaller.cpp  FileData.cpp  FileFilterIndex.cpp  FileSorts.cpp  MetaData.cpp  NetworkThread.cpp  RetroAchievements.cpp  SystemData.cpp  SystemScreenSaver.cpp  ThreadedBluetooth.cpp  ThreadedHasher.cpp  Win32ApiSystem.cpp  main.cpp
es-app/src/components/: ScraperSearchComponent.cpp
es-app/src/guis/: GuiAutoScrape.cpp  GuiBackup.cpp  GuiBackupStart.cpp  GuiBatoceraStore.cpp  GuiBezelInstaller.cpp  GuiBios.cpp  GuiBluetoothDeviceOptions.cpp  GuiBluetoothDevices.cpp  GuiBluetoothPair.cpp  GuiCollectionSystemsOptions.cpp  GuiControllersSettings.cpp  GuiFileBrowser.cpp  GuiGameAchievements.cpp  GuiGameOptions.cpp  GuiGameScraper.cpp  GuiGamelistFilter.cpp  GuiGamelistOptions.cpp  GuiGeneralScreensaverOptions.cpp  GuiHashStart.cpp  GuiImageViewer.cpp  GuiImageViewer.h  GuiInstall.cpp  GuiInstallStart.cpp  GuiKeyMappingEditor.cpp  GuiKeyboardLayout.cpp  GuiMenu.cpp  GuiMetaDataEd.cpp  GuiNetPlay.cpp  GuiNetPlaySettings.cpp  GuiRetroAchievements.cpp  GuiRetroAchievementsSettings.cpp  GuiSaveState.cpp  GuiScraperSettings.cpp  GuiScraperStart.cpp  GuiSettings.cpp  GuiSystemInformation.cpp  GuiThemeInstaller.cpp  GuiUpdate.cpp  GuiWifi.cpp
es-app/src/scrapers/: ThreadedScraper.cpp
es-app/src/views/: SystemView.cpp  ViewController.cpp
es-app/src/views/gamelist/: DetailedContainer.cpp  GameNameFormatter.cpp  ISimpleGameListView.cpp
es-core/: CMakeLists.txt
es-core/src/: BindingManager.cpp  GuiComponent.cpp  GunManager.cpp  InputConfig.cpp  InputManager.cpp  LocaleES.cpp  LocaleES.h  MameNames.cpp  Sound.cpp  Splash.cpp  TextToSpeech.cpp  ThemeData.cpp  VolumeControl.cpp  VolumeControl.h  Window.cpp
es-core/src/anim/: ThemeAnimation.h  ThemeStoryboard.cpp  ThemeStoryboard.h
es-core/src/components/: AsyncNotificationComponent.cpp  BusyComponent.cpp  CarouselComponent.cpp  ComponentGrid.cpp  ComponentList.cpp  ComponentList.h  ComponentTab.cpp  ComponentTab.h  DateTimeComponent.cpp  ImageComponent.cpp  ImageGridComponent.h  MenuComponent.cpp  OptionListComponent.h  SliderComponent.cpp  SwitchComponent.cpp  TextEditComponent.cpp  TextListComponent.h  VideoComponent.cpp  VideoVlcComponent.cpp  WebImageComponent.cpp
es-core/src/guis/: GuiDetectDevice.cpp  GuiInputConfig.cpp  GuiMsgBox.cpp  GuiTextEditPopup.cpp  GuiTextEditPopupKeyboard.cpp
es-core/src/renderers/: GlExtensions.cpp  Renderer.cpp  Renderer.h
es-core/src/resources/: Font.cpp  Font.h  ResourceManager.cpp  ResourceManager.h  TextureData.cpp
es-core/src/utils/: FileSystemUtil.cpp  MathExpr.cpp  TimeUtil.cpp
es-pdf-converter/: cmake_install.cmake
macOS/: 3dsLaunch  README.md  emulatorLauncher  es_find_rules.xml  es_systems.xml  ps3Launch  scummvmLaunch  squashfsmount  xboxLaunch
macOS/ES-DE/: es_find_rules.xml  es_systems.xml
macOS/launchers/: 3dsLaunch  apple2gsLaunch  emulatorLauncher  flycastLaunch  hypseusLaunch  ps3Launch  psvitaLaunch  scummvmLaunch  snes-msu1Launch  xboxLaunch
